--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dominant-colours"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Ivan Uemlianin <ivan@llaisdy.co.uk>"]
 description = "Extract dominant colours from images using k-means clustering"
@@ -10,11 +10,14 @@ keywords = ["color", "image", "clustering"]
 categories = ["command-line-utilities", "multimedia::images"]
 
 [dependencies]
+anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 image = "0.24"
 linfa = "0.7"
 linfa-clustering = "0.7"
 ndarray = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3.8"
